login created/autheticated

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO = mongodb+srv://shivamkumar:nobitalovesizuka@cluster0.ailmmey.mongodb.net/?retryWrites=true&w=majority
+MONGO = mongodb+srv://shivamkumar:nobitalovesizuka@cluster0.ailmmey.mongodb.net/inotebook?retryWrites=true&w=majority
